# random-radio

./: .gitignore  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
.github/workflows/: main.yaml
mixcloud/: date.py  main.py  process.py  process2.py  pyproject.toml  song_titles.py
mixcloud/data/: data_with_page.json  date_names.csv  date_names.json  date_output.json  html_dates_song_tiles.json  html_output copy.json  mixcloud_results.json  names.csv  result.json  song_titles_output.json
src/lib/: other_rock_show_old.json
src/routes/: +page.svelte  page copy.svelte
