[project]
name = "mixcloud"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ace-tools>=0.0",
    "beautifulsoup4>=4.13.3",
    "dateparser>=1.2.1",
    "dotenv>=0.9.9",
    "html5lib>=1.1",
    "lxml>=5.3.1",
    "markdownify>=1.1.0",
    "openai>=1.66.3",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
    "selenium>=4.29.0",
    "tqdm>=4.67.1",
]
